typescript/checker/tests/conformance/classes/members/accessibility/classPropertyIsPublicByDefault.ts.stderr
error: jsc.taraget should be es5 or upper to use getter / setter
 --> $DIR/tests/conformance/classes/members/accessibility/classPropertyIsPublicByDefault.ts:3:9
  |
3 |     get y() { return null; }
  |         ^

error: jsc.taraget should be es5 or upper to use getter / setter
 --> $DIR/tests/conformance/classes/members/accessibility/classPropertyIsPublicByDefault.ts:4:9
  |
4 |     set y(x) { }
  |         ^

error: jsc.taraget should be es5 or upper to use getter / setter
 --> $DIR/tests/conformance/classes/members/accessibility/classPropertyIsPublicByDefault.ts:8:16
  |
8 |     static get b() { return null; }
  |                ^

error: jsc.taraget should be es5 or upper to use getter / setter
 --> $DIR/tests/conformance/classes/members/accessibility/classPropertyIsPublicByDefault.ts:9:16
  |
9 |     static set b(x) { }
  |                ^

